# pq-ec-cryptography-benchmarks

./: .gitignore  Cargo.toml  disassembly.txt
benchmark/: Cargo.toml
benchmark/benches/: FALCON_pk_recovery_mode_bench.rs  FALCON_standard_bench.rs  ec_bench.rs  falcon_rust_backup.rs  txn_bench.rs
falcon-rust/: Cargo.toml
falcon-rust/src/: cyclotomic_fourier.rs  falcon.rs  falcon512.rs  lib.rs  samplerz.rs
