[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmarking suite for falcon-rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon-rust = { path = "../falcon-rust/" }
itertools = "0.12.0"
pqcrypto-falcon = "0.3.0"
rand = "0.8.5"

# additional
secp256k1 = { version = "0.29.0", features = ["rand"] }
bitcoin_hashes = { version = "0.14", default-features = false}


[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "FALCON_standard_bench"
harness = false

[[bench]]
name = "FALCON_pk_recovery_mode_bench"
harness = false

[[bench]]
name = "ec_bench"
harness =false
